--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://nmbrank.netlify.app"
+baseurl = "https://stanyuzu.netlify.app"
 title = "NMB rankings"
 author = "nvmea"
 canonifyurls = true
