--- a/config.toml
+++ b/config.toml
@@ -43,4 +43,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     name = "Twitter"
     url = "https://twitter.com/yuzuha_hongo"
     weight = 4
+[[menu.primary]]
+    name = "NMB tweet database"
+    url = "https://nvmea.github.io/namba"
+    weight = 5
     
