--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseurl = "https://stanyuzu.netlify.app/"
-title = "NMB rankings"
+title = "Stan Yuzu"
 author = "nvmea"
 canonifyurls = true
 languagecode = "en"
