--- a/config.toml
+++ b/config.toml
@@ -21,6 +21,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
   uselatex = true
   progressively = false
   description = "Hongo Yuzuha fanpage"
+  logo.url = "logo.png"
   twitterAuthor = "@nvmea"
   twitterSite = "@invalid_input"
 # commentsrepo = "user/repo"
