--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
   logofile = "logo.png"
   twitterAuthor = "@nvmea"
   twitterSite = "@invalid_input"
+  customCSS = ["css/fonts.css"]
 # commentsrepo = "user/repo"
 
 [markup]
