--- a/config.toml
+++ b/config.toml
@@ -37,8 +37,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_cache$", "\\.knit\\.md$", "\\.utf8\
     url = "/"
     weight = 1
 [[menu.primary]]
-    name = "About"
-    url = "/about/"
+    name = "Magazines"
+    url = "/magazines/"
     weight = 2
 [[menu.primary]]
     name = "Instagram"
